--- a/app/views/trip_plans/new.html.erb
+++ b/app/views/trip_plans/new.html.erb
@@ -7,16 +7,16 @@
 <% end %>
 <%= form_for(@trip_plan)  do |f| %>
   <div>
-    <%= f.label :title, 'Título' %>
+    <%= f.label :title %>
     <%= f.text_field :title %>
   </div>
   <div>
-    <%= f.label :start_date, 'Data Início' %>
+    <%= f.label :start_date %>
     <%= f.date_field :start_date %>
   </div>
   <div>
-    <%= f.label :end_date, 'Data Fim' %>
+    <%= f.label :end_date %>
     <%= f.date_field :end_date %>
   </div>
-  <%= f.submit 'Criar' %>
+  <%= f.submit %>
 <% end %>
