--- a/app/views/itineraries/new.html.erb
+++ b/app/views/itineraries/new.html.erb
@@ -1,27 +1,39 @@
-<h1>Novo itinerario</h1>
-<div class="">
-  <%= form_for [@trip_plan, @itinerary] do |f| %>
-    <div class="">
-      <%= f.label :location, 'Localização' %>
-      <%= f.text_field :location %>
-    </div>
-
-    <div class="">
-      <%= f.label :season, 'Temporada' %>
-      <%= f.text_field :season %>
-    </div>
-
-    <div class="">
-      <%= f.label :start_date, 'Data início' %>
-      <%= f.text_field :start_date %>
-    </div>
-
-    <div class="">
-      <%= f.label :end_date, 'Data fim' %>
-      <%= f.text_field :end_date %>
-    </div>
-    <div class="">
-      <%= f.submit 'Salvar' %>
-    </div>
+<div class="container">
+  <h1>Novo itinerario</h1>
+  <div class="alert alert-danger alert-dismissible fade show" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    <%= flash[:notice] %>
+  </div>
+  <% @itinerary.errors.full_messages.each do |i| %>
+    <p><%= i %></p>
   <% end %>
+  <div class="form-control col-sm-5">
+    <%= form_for [@trip_plan, @itinerary] do |f| %>
+      <div>
+        <%= f.label :location, 'Localização' %>
+        <%= f.text_field :location, class: 'form-control' %>
+      </div>
+
+      <div>
+        <%= f.label :season, 'Temporada' %>
+        <%= f.text_field :season, class: 'form-control' %>
+      </div>
+
+      <div>
+        <%= f.label :start_date, 'Data início' %>
+        <%= f.date_field :start_date, class: 'form-control' %>
+      </div>
+
+      <div>
+        <%= f.label :end_date, 'Data fim' %>
+        <%= f.date_field :end_date, class: 'form-control' %>
+      </div>
+      </br>
+      <div class="">
+        <%= f.submit 'Salvar', class: 'btn btn-primary' %>
+      </div>
+    <% end %>
+  </div>
 </div>
