--- a/app/views/itineraries/new.html.erb
+++ b/app/views/itineraries/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Novo itinerario</h1>
+  <h1>Novo itinerário</h1>
   <div class="alert alert-danger alert-dismissible fade show" role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
