--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,3 +1,4 @@
+<%= flash[:errors] %>
 <%= form_tag(search_path, method: 'get') do %>
   <%= label_tag(:location, 'Localização') %>
   <%= text_field_tag(:location, params[:location]) %>
@@ -8,17 +9,18 @@
   <%= submit_tag('Buscar') %>
 <% end %>
 <hr>
-<%= flash[:errors] %>
-<% if @itineraries.empty? %>
-  <p>Nenhum resultado encontrado</p>
-<% else %>
-  <p>Resultados encontrados: <%= @itineraries.count %></p>
-  <% @itineraries.each do |itinerary| %>
-  <h1><%= itinerary.trip_plan.title %></h1>
-  <h2>Roteiro: <%= itinerary.location %></h2>
-  <ul>
-    <li>Data inicial: <%= itinerary.start_date.strftime("%d/%m/%Y") %></li>
-    <li>Data final: <%= itinerary.end_date.strftime("%d/%m/%Y") %></li>
-  </ul>
+<% if !@itineraries.nil?%>
+  <% if @itineraries.empty? %>
+    <p>Nenhum resultado encontrado</p>
+  <% else %>
+    <p>Resultados encontrados: <%= @itineraries.count %></p>
+    <% @itineraries.each do |itinerary| %>
+    <h1><%= itinerary.trip_plan.title %></h1>
+    <h2>Roteiro: <%= itinerary.location %></h2>
+    <ul>
+      <li>Data inicial: <%= itinerary.start_date.strftime("%d/%m/%Y") %></li>
+      <li>Data final: <%= itinerary.end_date.strftime("%d/%m/%Y") %></li>
+    </ul>
+    <% end %>
   <% end %>
 <% end %>
