--- a/app/views/trip_plans/index.html.erb
+++ b/app/views/trip_plans/index.html.erb
@@ -1,12 +1,14 @@
 <h3>Plano de Viagem</h3>
 
 <%= link_to 'Criar novo plano', new_trip_plan_path  %>
-<div class="alert alert-danger alert-dismissible fade show" role="alert">
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
-  <%= flash[:notice] %>
-</div>
+<% if flash.any? %>
+  <div class="alert alert-success alert-dismissible fade show" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    <%= flash[:notice] %>
+  </div>
+<% end %>
 <% if @trip_plans.present? %>
   <% @trip_plans.each do |trip_plan|  %>
     <h5><%= link_to trip_plan.title, trip_plan_path(trip_plan.id) %></h5>
@@ -18,3 +20,4 @@
 <% else %>
   <p>Não existem planos disponíveis</p>
 <% end %>
+<%= link_to 'Voltar', root_path %>
