WIP: Add layout suggestion

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,16 @@
-<h1>Bem vindo ao TravelMatch</h1>
-<%= link_to 'Planos de Viagem', trip_plans_path %>
-<hr>
+<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light" data-src="https://unsplash.com/photos/1ms2mtK6izM/download?force=true">
+  <div class="col-md-9 p-lg-9 mx-auto my-9">
+    <h1>Bem vindo ao TravelMatch</h1>
+    <%= link_to 'Planos de Viagem', trip_plans_path %>
 
-<%= form_tag(search_path, method: 'get') do %>
-  <%= label_tag(:location, 'Localização') %>
-  <%= text_field_tag(:location, params[:location]) %>
-  <%= label_tag(:start_date, 'Data inicial') %>
-  <%= date_field_tag(:start_date, params[:start_date]) %>
-  <%= label_tag(:end_date, 'Data final') %>
-  <%= date_field_tag(:end_date, params[:end_date]) %>
-  <%= submit_tag('Buscar') %>
-<% end %>
-<hr>
+    <%= form_tag(search_path, method: 'get') do %>
+      <%= label_tag(:location, 'Localização') %>
+      <%= text_field_tag(:location, params[:location]) %>
+      <%= label_tag(:start_date, 'Data inicial') %>
+      <%= date_field_tag(:start_date, params[:start_date]) %>
+      <%= label_tag(:end_date, 'Data final') %>
+      <%= date_field_tag(:end_date, params[:end_date]) %>
+      <%= submit_tag('Buscar') %>
+    <% end %>
+  </div>
+</div>
