Viajante envia um match

--- a/app/views/trip_plans/show.html.erb
+++ b/app/views/trip_plans/show.html.erb
@@ -5,13 +5,19 @@
   <li><%= "De #{itinerary.start_date.strftime('%d/%m/%Y')}
   à #{itinerary.end_date.strftime('%d/%m/%Y')}" %></li>
 <% end %>
-
-<% if @match.nil?  %>
-  <%= form_for [@trip_plan, @match_new] do |f| %>
-    <%= f.label :comment, "Envie uma mensagem" %>
-    <%= f.text_area :comment %>
-    <%= f.submit "Solicite um match" %>
+ <br /> <br />
+<div>
+  <% if @match.nil?  %>
+    <%= form_for [@trip_plan, @match_new] do |f| %>
+      <div>
+        <%= f.label :comment, "Envie uma mensagem" %> <br />
+        <%= f.text_area :comment %>
+      </div>
+      <div>
+        <%= f.submit "Solicite um match" %>
+      </div>
+    <% end %>
+  <% else  %>
+    <p>Status: <%= @match.status %> </p>
   <% end %>
-<% else  %>
-  <p>Status: <%= @match.status %> </p>
-<% end %>
+</div>
