[WIP] Implementação do Devise

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
 
   <body>
     <h1>Travel Match</h1>
-    <%= flash[:error] %>  
+    <%= flash[:error] %>
+    <%= render 'shared/nav' %>
     <%= yield %>
   </body>
 </html>
