--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,10 @@
   </head>
 
   <body>
-    <h1>Travel Match</h1>
-    <%= flash[:error] %>  
-    <%= yield %>
+    <div class="container">
+      <h1>Travel Match</h1>
+      <%= render "shared/notify" %>
+      <%= yield %>
+    </div>
   </body>
 </html>
