--- a/app/views/trip_plans/new.html.erb
+++ b/app/views/trip_plans/new.html.erb
@@ -1,10 +1,4 @@
 <h3>Criar plano de viagem</h3>
-
-<% if @trip_plan.errors.present? %>
-  <% @trip_plan.errors.full_messages.each do |msg| %>
-      <%= msg %> <br>
-  <% end %>
-<% end %>
 <%= form_for(@trip_plan)  do |f| %>
   <div>
     <%= f.label :title %>
@@ -19,4 +13,6 @@
     <%= f.date_field :end_date %>
   </div>
   <%= f.submit %>
+  <br>
+  <%= link_to 'Voltar', trip_plans_path %>
 <% end %>
