--- a/app/views/trip_plans/index.html.erb
+++ b/app/views/trip_plans/index.html.erb
@@ -1,5 +1,4 @@
 <h3>Plano de Viagem</h3>
-
 <%= link_to 'Criar novo plano', new_trip_plan_path  %>
 <% if flash.any? %>
   <div class="alert alert-success alert-dismissible fade show" role="alert">
@@ -9,8 +8,10 @@
     <%= flash[:notice] %>
   </div>
 <% end %>
+
 <% if @trip_plans.present? %>
   <% @trip_plans.each do |trip_plan|  %>
+    <%= image_tag trip_plan.photo.url(:thumb) , class: 'float-left' %>
     <h5><%= link_to trip_plan.title, trip_plan_path(trip_plan.id) %></h5>
     <ul>
       <li>Data Início: <%= trip_plan.start_date.strftime('%d/%m/%Y') %></li>
@@ -20,4 +21,5 @@
 <% else %>
   <p>Não existem planos disponíveis</p>
 <% end %>
-<%= link_to 'Voltar', root_path %>
+
+<p><%= link_to 'Voltar', root_path %></p>
