--- a/app/views/trip_plans/show.html.erb
+++ b/app/views/trip_plans/show.html.erb
@@ -1,4 +1,5 @@
 <h3><%= @trip_plan.title %></h3>
+<%= image_tag @trip_plan.photo.url(:medium) %>
 <% if flash.any? %>
   <div class="alert alert-success alert-dismissible fade show" role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
