Viajante aprova um match

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,7 +1,7 @@
 <nav>
   <% if user_signed_in? %>
-    <%= link_to 'Meus planos', my_plans_path %>
-    <%= link_to 'Sair', destroy_user_session_path, method: :delete %>
+    <%= link_to 'Meus planos', my_plans_path %> |
+    <%= link_to('Sair', destroy_user_session_path, method: :delete) %>
   <% else %>
     <%= link_to 'Entrar', new_user_session_path %>
   <% end %>
