--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,7 +1,10 @@
 <nav>
+  <%= link_to 'Home', root_path %> |
   <% if user_signed_in? %>
+    <%= link_to 'Criar novo plano', new_trip_plan_path  %> |
     <%= link_to 'Meus planos', my_plans_path %> |
-    <%= link_to 'Meus matches', matches_path %> |
+    <%= link_to 'Meus matches', matches_path %> <br>
+    Olá <%= current_user.email %> |
     <%= link_to 'Sair', destroy_user_session_path, method: :delete %>
   <% else %>
     <%= link_to 'Entrar', new_user_session_path %>
