--- a/app/views/trip_plans/index.html.erb
+++ b/app/views/trip_plans/index.html.erb
@@ -1,5 +1,4 @@
 <h3>Plano de Viagem</h3>
-<%= link_to 'Criar novo plano', new_trip_plan_path  %>
 <% if flash.any? %>
   <div class="alert alert-success alert-dismissible fade show" role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -11,15 +10,11 @@
 
 <% if @trip_plans.present? %>
   <% @trip_plans.each do |trip_plan|  %>
-    <%= image_tag trip_plan.photo.url(:thumb) , class: 'float-left' %>
-    <h5><%= link_to trip_plan.title, trip_plan_path(trip_plan.id) %></h5>
-    <ul>
-      <li>Data Início: <%= trip_plan.start_date.strftime('%d/%m/%Y') %></li>
-      <li>Data Fim: <%= trip_plan.end_date.strftime('%d/%m/%Y') %></li>
-    </ul>
+    <%= render trip_plan %>
   <% end %>
 <% else %>
   <p>Não existem planos disponíveis</p>
 <% end %>
-
-<p><%= link_to 'Voltar', root_path %></p>
+<div class='float-none'>
+  <p><%= link_to 'Voltar', root_path %></p>
+</div>
