--- a/app/views/trip_plans/my_plans.html.erb
+++ b/app/views/trip_plans/my_plans.html.erb
@@ -1,4 +1,4 @@
 <h3>Meus Planos</h3>
 <% @trip_plans.each do |trip_plan| %>
-  <%= link_to trip_plan.title, trip_plan_path(trip_plan) %>
+  <%= render trip_plan %>
 <% end %>
