--- a/app/views/trip_plans/show.html.erb
+++ b/app/views/trip_plans/show.html.erb
@@ -28,6 +28,7 @@
             <p>Mensagem: <%= match.comment %></p>
             <p>Status: <%= match.status %></p>
             <%= link_to 'Aceitar', match_accept_path(match), method: :post %>
+            <%= link_to 'Rejeitar', match_reject_path(match), method: :post %>
           </div>
         <% end %>
       <% end %>
