--- a/app/assets/stylesheets/base/_colors.scss
+++ b/app/assets/stylesheets/base/_colors.scss
@@ -8,5 +8,6 @@ $slate-gray: #7d7f93;
 $bright-turquoise: #2fd8f9;
 $dodger-blue: #2e93f7;
 $sulu: #a6f461;
+$dark-blue: #0B638E;
 
 $primary: $bright-turquoise;
