--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -3,6 +3,7 @@
     @extend %box-shadow;
     @extend %subtle-round-border;
     background-color: $white;
+    opacity: 0.9;
     overflow: hidden;
 
     .button {
