--- a/app/assets/stylesheets/components/_site_header.scss
+++ b/app/assets/stylesheets/components/_site_header.scss
@@ -1,6 +1,6 @@
 .site-header {
-  background-color: $white;
+  background-color: $dark-blue;
   .logo {
-    font-size: 24px;
+    font-size: 26px;
   }
 }
