--- a/app/views/trip_plans/my_plans.html.erb
+++ b/app/views/trip_plans/my_plans.html.erb
@@ -1,4 +1,6 @@
-<h3>Meus Planos</h3>
-<% @trip_plans.each do |trip_plan| %>
+<div class="container padding-top">
+  <h3>Meus Planos</h3>
+  <% @trip_plans.each do |trip_plan| %>
   <%= render trip_plan %>
-<% end %>
+  <% end %>
+</div>
