--- a/app/views/trip_plans/show.html.erb
+++ b/app/views/trip_plans/show.html.erb
@@ -1,6 +1,7 @@
-<h3><%= @trip_plan.title %></h3>
-<%= image_tag @trip_plan.photo.url(:medium) %>
-<% if flash.any? %>
+<div class="container padding-top">
+  <h3><%= @trip_plan.title %></h3>
+  <%= image_tag @trip_plan.photo.url(:medium) %>
+  <% if flash.any? %>
   <div class="alert alert-success alert-dismissible fade show" role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
@@ -8,36 +9,37 @@
     <%= flash[:success] %>
     <%= flash[:notice] %>
   </div>
-<% end %>
-<% @trip_plan.itineraries.each do |itinerary| %>
+  <% end %>
+  <% @trip_plan.itineraries.each do |itinerary| %>
   <h4><%= itinerary.season %></h4>
   <h5><%= itinerary.location %></h5>
   <li> De <%= I18n.l(itinerary.start_date) %>
-  a <%= I18n.l(itinerary.end_date) %></li>
-<% end %>
-<br /> <br />
-<% if user_signed_in? %>
-  <div>
-    <%= @trip_plan.add_itinerary_link %>
-    <%= @trip_plan.pendent_matches %>
-    <%= @trip_plan.accepted_matches %>
-    <% unless @trip_plan.owner?(current_user) %>
-      <% if !@match.is_a?(Match) && @match.any?  %>
-        <% @match.each do |match| %>
-          Status da solicitação de match: <p><%= Match.human_attribute_name(match.status) %> </p>
-        <% end %>
-      <% elsif @match.new_record?   %>
-        <%= form_for [@trip_plan, @match] do |f| %>
-          <div>
-            <%= f.label :comment, "Envie uma mensagem" %> <br />
-            <%= f.text_area :comment %>
-          </div>
-          <div>
-            <%= f.submit "Solicite um match" %>
-          </div>
-        <% end %>
-      <% end %>
+    a <%= I18n.l(itinerary.end_date) %></li>
     <% end %>
-  </div>
-<% end %>
-<%= link_to 'Voltar', trip_plans_path %>
+    <br /> <br />
+    <% if user_signed_in? %>
+    <div>
+      <%= @trip_plan.add_itinerary_link %>
+      <%= @trip_plan.pendent_matches %>
+      <%= @trip_plan.accepted_matches %>
+      <% unless @trip_plan.owner?(current_user) %>
+      <% if !@match.is_a?(Match) && @match.any?  %>
+      <% @match.each do |match| %>
+      Status da solicitação de match: <p><%= Match.human_attribute_name(match.status) %> </p>
+      <% end %>
+      <% elsif @match.new_record?   %>
+      <%= form_for [@trip_plan, @match] do |f| %>
+      <div>
+        <%= f.label :comment, "Envie uma mensagem" %> <br />
+        <%= f.text_area :comment %>
+      </div>
+      <div>
+        <%= f.submit "Solicite um match" %>
+      </div>
+      <% end %>
+      <% end %>
+      <% end %>
+    </div>
+    <% end %>
+    <%= link_to 'Voltar', trip_plans_path %>
+</div>
