--- a/app/views/itineraries/new.html.erb
+++ b/app/views/itineraries/new.html.erb
@@ -1,11 +1,12 @@
-<div class="container">
+<div class="container padding-top">
   <h1>Novo itinerário</h1>
+  <%= render @trip_plan %>
   <% if @itinerary.errors.any? %>
     <div class="alert alert-danger alert-dismissible fade show" role="alert">
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
-      <%= flash[:notice] %>
+      <%= notice %>
     </div>
   <% end %>
   <% @itinerary.errors.full_messages.each do |i| %>
@@ -33,7 +34,7 @@
         <%= f.date_field :end_date, class: 'form-control' %>
       </div>
       </br>
-      <div class="">
+      <div>
         <%= f.submit 'Salvar', class: 'btn btn-primary' %>
       </div>
     <% end %>
