--- a/app/views/trip_plans/new.html.erb
+++ b/app/views/trip_plans/new.html.erb
@@ -1,26 +1,33 @@
-<h3>Criar plano de viagem</h3>
-
-<% if @trip_plan.errors.present? %>
-  <% @trip_plan.errors.full_messages.each do |msg| %>
+<div class="container padding-top">
+  <h3>Criar um Plano de Viagem</h3>
+  <% if @trip_plan.errors.present? %>
+    <% @trip_plan.errors.full_messages.each do |msg| %>
       <%= msg %> <br>
+    <% end %>
   <% end %>
-<% end %>
-<%= form_for(@trip_plan, html: { multipart: true }) do |f| %>
-  <div>
-    <%= f.label :title %>
-    <%= f.text_field :title %>
+  <div class="form-control col-sm-6">
+    <%= form_for(@trip_plan, html: { multipart: true }) do |f| %>
+    <div>
+      <%= f.label :title %>
+      <%= f.text_field :title, class: 'form-control' %>
+    </div>
+    <div>
+      <%= f.label :start_date %>
+      <%= f.date_field :start_date, class: 'form-control' %>
+    </div>
+    <div>
+      <%= f.label :end_date %>
+      <%= f.date_field :end_date, class: 'form-control' %>
+    </div>
+    <div>
+      <%= f.label :photo, 'Foto' %>
+      <%= f.file_field :photo, class: 'form-control' %>
+    </div>
+    <div class="padding-top">
+      <%= f.submit 'Criar um Plano de Viagem', class: 'btn btn-custom btn-lg"'%>
+    </div>
+    <% end %>
   </div>
-  <div>
-    <%= f.label :start_date %>
-    <%= f.date_field :start_date %>
-  </div>
-  <div>
-    <%= f.label :end_date %>
-    <%= f.date_field :end_date %>
-  </div>
-  <div>
-    <%= f.label :photo, 'Foto' %>
-    <%= f.file_field :photo %>
-  </div>
-  <%= f.submit %>
-<% end %>
+  <%= flash[:notice] %>
+  <%= flash[:error] %>
+</div>
