--- a/app/assets/stylesheets/components/_site_header.scss
+++ b/app/assets/stylesheets/components/_site_header.scss
@@ -1,6 +1,22 @@
 .site-header {
   background-color: $white;
+
   .logo {
     font-size: 24px;
+  }
+
+  .py-2 + .py-2 {
+    margin-left: 1em;
+  }
+
+  .logo + .py-2 {
+    margin-left: 2em;
+  }
+
+  @include max(767px) {
+    .logo + .py-2,
+    .py-2 + .py-2 {
+      margin-left: 0;
+    }
   }
 }
