--- a/app/views/trip_plans/show.html.erb
+++ b/app/views/trip_plans/show.html.erb
@@ -1,3 +1,5 @@
+<%= @trip_plan.add_itinerary_link %>
+
 <h3><%= @trip_plan.title %></h3>
 <%= image_tag @trip_plan.photo.url(:medium) %>
 <% if flash.any? %>
@@ -11,15 +13,18 @@
 <% end %>
 
 <% @trip_plan.itineraries.each do |itinerary| %>
-  <h4><%= link_to itinerary.season, trip_plan_itinerary_path(itinerary) %></h4>
-  <h5><%= itinerary.location %></h5>
-  <li> De <%= I18n.l(itinerary.start_date) %>
-  a <%= I18n.l(itinerary.end_date) %></li>
+  <div>
+    <h4><%= link_to itinerary.season, trip_plan_itinerary_path(itinerary) %></h4>
+    <h5><%= itinerary.location %></h5>
+    <li> De <%= I18n.l(itinerary.start_date) %>
+      a <%= I18n.l(itinerary.end_date) %>
+    </li>
+  </div>
+  </br>
 <% end %>
-<br /> <br />
+
 <% if user_signed_in? %>
   <div>
-    <%= @trip_plan.add_itinerary_link %>
     <%= @trip_plan.pendent_matches %>
     <%= @trip_plan.accepted_matches %>
     <% unless @trip_plan.owner?(current_user) %>
