--- a/app/views/itineraries/new.html.erb
+++ b/app/views/itineraries/new.html.erb
@@ -1,6 +1,5 @@
 <div class="container padding-top">
-  <h1>Novo itinerário</h1>
-  <%= render @trip_plan %>
+  <h3>Novo roteiro</h2>
   <% if @itinerary.errors.any? %>
     <div class="alert alert-danger alert-dismissible fade show" role="alert">
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
