--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
     <div class="hero__content">
       <header class="hero__header text-left">
         <h1 class="hero__title white-text">Encontre o seu roteiro ideal</h1>
-          <p class="hero__paragraph">
+          <p class="hero__paragraph"> <%= link_to 'Ver todos os roteiros', trip_plans_path %>
           </p>
       </header>
       <%= form_tag(search_path, method: 'get', class: 'form--line row') do %>
